--- a/4_jquery/jyanken/css/styles.css
+++ b/4_jquery/jyanken/css/styles.css
@@ -1,6 +1,7 @@
 body {
   /* width:100%;
   height:100%; */
+  text-align: center;
 }
 
 div {
@@ -8,26 +9,40 @@ div {
   height: 30%;
   display: inline;
   margin-right: 35px;
+  margin-left: 35px;
 }
 
 
 img {
   /* width: 300px;
   height: 300px; */
-  width: 30%;
-  height: 30%;
-
+  width: 13%;
+  height: 13%;
+  text-align: center;
 
 
 }
 
+.player1{
+  position: relative;
+  margin:0;
+}
+
+.com{
+  position: relative;
+  margin:0;
+}
+
+
+
 .result{
   display: block;
-  width:100px;
+  width:100%;
   height:100px;
   text-align: center;
   vertical-align: middle;
-  margin-top: 50px;
+  /* margin-top: 25px; */
+  margin-bottom: 20px;
   margin-left:  auto;
   margin-right: auto;
 }
@@ -55,6 +70,11 @@ img {
 div:hover{
   opacity: 0.5;
 }
+
+.hand:hover{
+  color: red;
+}
+
 
 .result {
   pointer-events: none;
