--- a/4_jquery/jyanken/css/styles.css
+++ b/4_jquery/jyanken/css/styles.css
@@ -3,9 +3,13 @@ body {
   height:100%; */
   text-align: center;
 }
-
-div {
-  width:30%;
+.clearfix::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+.hand, .comHand{
+  width: 300px;
   height: 30%;
   display: inline;
   margin-right: 35px;
